gcc/testsuite/rust/rustc/ui/async-await/no-unsafe-async_dg.rs
// { dg-additional-options "-frust-edition=2018" }

struct S;

impl S {
    #[cfg(FALSE)]
    unsafe async fn g() {} // { dg-error "" "" { target *-*-* } }
}

#[cfg(FALSE)]
unsafe async fn f() {} // { dg-error "" "" { target *-*-* } }

fn main() {}

